# acerola

./: .gitignore  CONTEXT.md  README.md  TODO.md  build_output.txt  gradle.properties  settings.gradle.kts
.github/workflows/: release.yml  tests.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
acerola/: CONTEXT.md  TODO.md  build.gradle.kts
acerola/app/: build.gradle.kts
acerola/core/: build.gradle.kts
acerola/data/: build.gradle.kts
acerola/data/src/main/graphql/anilist/: MediaDetails.graphql  MediaSearch.graphql  schema.graphqls
acerola/gradle/: libs.versions.toml
acerola/infra/: build.gradle.kts
acerola/native/: .gitignore  build.gradle.kts
acerola/native/rust/: Cargo.toml
acerola/native/rust/src/: bridge.rs  lib.rs  state.rs
acerola/ui/: build.gradle.kts
acerola/ui/src/main/res/drawable/: tutorial_slide_files.xml
acerola/ui/src/main/res/values/: plurals.xml  strings.xml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/br/acerola/manga/: MainActivity.kt
app/src/main/res/values/: strings.xml
core/: build.gradle.kts
data/: build.gradle.kts
data/src/main/graphql/anilist/: schema.graphqls
data/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
infra/: build.gradle.kts
infrastructure/: build.gradle.kts
infrastructure/src/main/res/values/: strings.xml
presentation/: build.gradle.kts
presentation/src/main/res/values/: strings.xml
ui/: build.gradle.kts
ui/src/main/res/values/: strings.xml
(+1091 files in other folders)
