[lib]
crate-type = ["cdylib"]
name = "acerola_android"

[package]
authors = ["Vinícius Gabriel Pereira Leitão"]
description = "FFI para implementar camada p2p para o android conectar a outros node"
edition = "2021"
license = "GPL-3.0-only"
name = "acerola-android"
version = "0.0.1"

[dependencies]
acerola-p2p = {git = "https://github.com/Vinicius-Gabriel-P-Leitao/acerola-p2p.git", version = "0.0.5"}
jni = "0.21.1"
once_cell = "1.20.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.51.0", features = ["full"]}
